[tool.poetry]
name = "seo-optimizer"
version = "0.1.0"
description = "An SEO optimizing app"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
beautifulsoup4 = "^4.9.3"
requests = "^2.26.0"
openai = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
